Fixing align for footer (again)

--- a/static/base.css
+++ b/static/base.css
@@ -5,4 +5,5 @@ div.footer {
     position: fixed;
     bottom: 0px;
     alignment: center;
+    text-align: center;
 }
